src/test/ui/macros/macro-attribute.stderr
error: unexpected token: `$`
  --> $DIR/macro-attribute.rs:1:9
   |
LL | #[doc = $not_there]
   |         ^

error: aborting due to previous error

